--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "jsdom": "^20.0.0",
     "less": "3.13.1",
     "npm-run-all": "^4.1.5",
+    "sass": "^1.57.1",
     "terser": "^5.14.2",
     "typescript": "~4.7.4",
+    "unplugin-auto-import": "^0.12.1",
     "unplugin-vue-components": "^0.22.12",
     "vite": "^3.0.2",
     "vitest": "^0.18.1",
