--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "unplugin-auto-import": "^0.12.1",
     "unplugin-vue-components": "^0.22.12",
     "vite": "^3.0.2",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vitest": "^0.18.1",
     "vue-template-compiler": "^2.7.7",
     "vue-tsc": "^0.38.8"
