--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "ant-design-vue": "1.7.8",
     "pinia": "^2.0.16",
-    "vue": "^2.7.7",
+    "vue": "2.7.14",
     "vue-router": "^3.5.4"
   },
   "devDependencies": {
@@ -39,7 +39,7 @@
     "vite": "^3.0.2",
     "vite-plugin-svg-icons": "^2.0.1",
     "vitest": "^0.18.1",
-    "vue-template-compiler": "^2.7.7",
+    "vue-template-compiler": "2.7.14",
     "vue-tsc": "^0.38.8"
   }
 }
